--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,27 +4,22 @@ networks:
   laravel:
 services:
   nginx:
-          image: nginx
-
+          build:
+            context: .
+            dockerfile: ./nginx/Dockerfile
           container_name: nginx
-
           ports:
             - "8088:80"
-
           volumes:
             - ./src:/var/www/html
-            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
           depends_on:
             - php
-            - postgres
-
           networks:
             - default
-
   redis:
           build:
             context: .
-            dockerfile: Dockerfile
+            dockerfile: ./redis/Dockerfile
           container_name: redis
           volumes:
             - ./redis/redis.conf:/etc/redis/redis.conf
@@ -35,16 +30,18 @@ services:
             image: postgres
             container_name: postgres
             restart: unless-stopped
-            tty: true 
+            tty: true
             ports:
-                - "4306:3306"
+              - "5433:5432"
             networks:
               - default
-  
+            environment:
+              - POSTGRES_PASSWORD=secret
+
   php:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./php/Dockerfile
 
     container_name: php
 
@@ -55,4 +52,5 @@ services:
     networks:
       - default
     depends_on:
-      - redis 
+      - redis
+      - postgres
