--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 80 default_server;
     index index.php index.html;
     server_name localhost;
     error_log /var/log/nginx/access.log;
@@ -9,13 +9,15 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location ~ \.php$ { 
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+    location ~ \.php$ {
+        try_files $uri /index.php =404;
+        fastcgi_pass php-upstream;
         fastcgi_index index.php;
-        include fastcgi_params;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fast_path_info;
+        #fixes timeouts
+        fastcgi_read_timeout 600;
+        include fastcgi_params;
     }
 }
